--- a/styles/_switch.scss
+++ b/styles/_switch.scss
@@ -84,7 +84,7 @@
                 width: 12px;
                 left: 4px;
                 bottom: 4px;
-                background-color: white;
+                background-color: var(--pure-white);
                 -webkit-transition: .4s;
                 transition: .4s;
             }
