--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -1,221 +1,3 @@
-@import url(./_colors.scss);
-:root {
-  --purple: #A729F5;
-  --error: #EE5454;
-  --success: #26D782;
-  --darkest: #313E51;
-  --navy: #3B4D66;
-  --grey-navy: #626C7F;
-  --pure-white: #FFFFFF;
-  --lighter: #F4F6FA;
-  --light-bluish: #ABC1E1;
-  --color-background: var(--lighter);
-  --main-text-color: var(--darkest);
-  --muted-text-color: var(--light-bluish);
-  --option-button-color: var(--pure-white);
-  --bg-url: url(../assets/images/pattern-background-desktop-light.svg);
-}
-
-[data-theme=dark] {
-  --color-background: var(--darkest);
-  --main-text-color: var(--pure-white);
-  --muted-text-color: var(--light-bluish);
-  --option-button-color: var(--navy);
-  --bg-url: url(../assets/images/pattern-background-desktop-dark.svg);
-}
-
-[data-theme=light] {
-  --main-text-color: var(--darkest);
-  --color-background: var(--pure-white);
-  --muted-text-color: var(--grey-navy);
-  --option-button-color: var(--pure-white);
-  --bg-url: url(../assets/images/pattern-background-desktop-light.svg);
-}
-
-body {
-  background: var(--bg-url), var(--color-background);
-  background-repeat: no-repeat;
-  background-size: cover;
-  transition: color 0.5s ease, background-color 0.5s ease, 0.5s ease;
-}
-@media (max-width: 768px) {
-  [data-theme=light] {
-    --bg-url: url(../assets/images/pattern-background-tablet-light.svg);
-    background-size: auto;
-  }
-  [data-theme=dark] {
-    --bg-url: url(../assets/images/pattern-background-tablet-dark.svg);
-    background-size: auto;
-  }
-}
-@media (max-width: 375px) {
-  [data-theme=light] {
-    --bg-url: url(../assets/images/pattern-background-mobile-light.svg);
-    background-size: auto;
-  }
-  [data-theme=dark] {
-    --bg-url: url(../assets/images/pattern-background-mobile-dark.svg);
-    background-size: auto;
-  }
-}
-@font-face {
-  font-family: "Rubik Medium";
-  src: url("../assets/fonts/static/Rubik-Medium.ttf");
-}
-@font-face {
-  font-family: "Rubik Regular";
-  src: url("../assets/fonts/static/Rubik-Regular.ttf");
-}
-@font-face {
-  font-family: "Rubik Italic";
-  src: url("../assets/fonts/static/Rubik-Italic.ttf");
-}
-@font-face {
-  font-family: "Rubik Light";
-  src: url("../assets/fonts/Rubik-VariableFont_wght.ttf");
-}
-@font-face {
-  font-family: "Rubik Light Italic";
-  src: url("../assets/fonts/Rubik-Italic-VariableFont_wght.ttf");
-}
-body {
-  font-family: "Rubik Regular";
-  font-size: 1rem;
-  line-height: 150%;
-  color: var(--main-text-color);
-}
-
-.light-font {
-  color: var(--main-text-color);
-  font-family: "Rubik Light";
-  font-style: normal;
-  font-weight: 300;
-  line-height: 100%; /* 40px */
-}
-
-.light-italic-font {
-  font-family: "Rubik Light Italic";
-}
-
-.medium-font {
-  font-family: "Rubik Medium";
-  color: var(--main-text-color);
-  font-style: normal;
-  font-weight: 500;
-  line-height: 100%; /* 40px */
-}
-
-.regular-font {
-  font-family: "Rubik Regular";
-  font-size: 14px;
-  font-style: italic;
-  font-weight: 400;
-  line-height: 150%; /* 21px */
-}
-
-.italic-font {
-  font-family: "Rubik Italic";
-}
-
-.muted-text {
-  color: var(--muted-text-color);
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
-
-:root {
-  --sun-icon-url: url(../assets/images/icon-sun-light.svg);
-  --moon-icon-url: url(../assets/images/icon-moon-light.svg);
-}
-
-[data-theme=light] {
-  --sun-icon-url: url(../assets/images/icon-sun-dark.svg);
-  --moon-icon-url: url(../assets/images/icon-moon-dark.svg);
-}
-
-[data-theme=dark] {
-  --sun-icon-url: url(../assets/images/icon-sun-light.svg);
-  --moon-icon-url: url(../assets/images/icon-moon-light.svg);
-}
-
-.theme-switcher-container {
-  display: flex;
-}
-.theme-switcher-container .switch-sun {
-  height: 16px;
-  width: 16px;
-  margin-right: 8px;
-  background-image: var(--sun-icon-url);
-  background-size: cover;
-  background-repeat: no-repeat;
-  align-self: center;
-}
-.theme-switcher-container .switch-moon {
-  height: 16px;
-  width: 16px;
-  margin-left: 8px;
-  background-image: var(--moon-icon-url);
-  background-size: cover;
-  background-repeat: no-repeat;
-  align-self: center;
-}
-.theme-switcher-container .switch {
-  position: relative;
-  display: inline-block;
-  width: 32px;
-  height: 20px;
-  position: relative;
-}
-.theme-switcher-container .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.theme-switcher-container .switch input + .slider {
-  background-color: var(--purple);
-}
-.theme-switcher-container .switch input:checked + .slider {
-  background-color: var(--purple);
-}
-.theme-switcher-container .switch input:checked + .slider:before {
-  -webkit-transform: translateX(12px);
-  -ms-transform: translateX(12px);
-  transform: translateX(12px);
-}
-.theme-switcher-container .switch input:focus + .slider {
-  box-shadow: 0 0 1px var(--purple);
-}
-.theme-switcher-container .switch .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.theme-switcher-container .switch .slider:before {
-  position: absolute;
-  content: "";
-  height: 12px;
-  width: 12px;
-  left: 4px;
-  bottom: 4px;
-  background-color: var(--pure-white);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.theme-switcher-container .switch .slider.round {
-  border-radius: 34px;
-}
-.theme-switcher-container .switch .slider.round:before {
-  border-radius: 50%;
-}
-
 .margin-top-0 {
   margin-top: 0px !important;
 }
@@ -2652,106 +2434,4 @@ h1, h2, h3, h4, h5, h6 {
 
 .block {
   display: block;
-}
-
-#subject-picker-component {
-  display: flex;
-  flex-flow: column;
-  row-gap: 12px;
-  flex-grow: 1;
-}
-#subject-picker-component .subject-picker-item {
-  display: flex;
-  flex-flow: row;
-  padding: 12px;
-  border-radius: 12px;
-  background-color: var(--option-button-color);
-  box-shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
-  cursor: pointer;
-}
-#subject-picker-component .subject-picker-item .subject-picker-icon img {
-  margin-right: 16px;
-  align-self: center;
-}
-#subject-picker-component .subject-picker-item span {
-  align-self: center;
-  font-size: 18px;
-}
-@media (max-width: 768px) {
-  #subject-picker-component .subject-picker-item .subject-picker-icon span {
-    font-size: 18px;
-  }
-}
-@media (max-width: 375px) {
-  #subject-picker-component .subject-picker-item .subject-picker-icon span {
-    font-size: 28px;
-  }
-}
-
-body {
-  box-sizing: border-box;
-  height: 100vh;
-  width: 100vw;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-body #container {
-  max-width: 1160px;
-  max-height: 705px;
-  width: 100%;
-  height: 100%;
-}
-body header {
-  padding: 83px 140px 0 140px;
-  display: flex;
-  justify-content: space-between;
-}
-body #content {
-  padding: 85px 140px 0 140px;
-  display: flex;
-  flex-flow: row;
-  gap: 48px;
-  flex-direction: row;
-}
-body #content #content-header {
-  margin-bottom: 40px;
-  max-width: 465px;
-}
-body #content h1 {
-  font-size: 64px;
-}
-body #content .muted-text {
-  font-size: 20px;
-}
-
-@media (max-width: 768px) {
-  header {
-    padding: 40px 64px 0 64px !important;
-  }
-  #content {
-    padding: 40px 64px 0 64px !important;
-    display: flex !important;
-    flex-flow: column !important;
-  }
-  #content h1 {
-    font-size: 64px !important;
-  }
-  #content .muted-text {
-    font-size: 20px !important;
-  }
-}
-@media (max-width: 375px) {
-  #content {
-    display: flex !important;
-    flex-flow: column !important;
-  }
-  #content h1 {
-    font-size: 40px !important;
-  }
-  #content .muted-text {
-    font-size: 14px !important;
-  }
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=helpers.css.map */
