--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,32 +1,87 @@
 @import './_colors.scss';
 @import './_typhography.scss';
 @import './switch';
+@import './helpers.scss';
+@import './subject-picker-component';
 
-body{
+body {
     box-sizing: border-box;
     height: 100vh;
     width: 100vw;
     padding: 0;
     margin: 0;
     display: flex;
-    align-content: center;
     justify-content: center;
     flex-wrap: wrap;
 
-    
-    #container{
+
+    #container {
         max-width: 1160px;
         max-height: 705px;
         width: 100%;
         height: 100%;
     }
-    
-    header{
-        padding: 16px 24px;
+
+    header {
+        padding: 83px 140px 0 140px;
         display: flex;
         justify-content: space-between;
-        .theme-switcher-container{
-            margin-right: 24px;
+
+    }
+
+    #content {
+        padding: 85px 140px 0 140px;
+        display: flex;
+        flex-flow: row;
+        gap: 48px;
+        flex-direction: row;
+
+        #content-header {
+            margin-bottom: 40px;
+            max-width: 465px;
+        }
+
+        h1{
+            font-size: 64px;            
+        }
+
+        .muted-text{
+            font-size: 20px;
+        }
+    }
+    
+}
+
+@media (max-width: 768px) {
+    header{
+        padding: 40px 64px 0 64px !important;
+    }
+    #content {
+        padding: 40px 64px 0 64px !important;
+        display: flex !important;
+        flex-flow: column !important;
+        #content-header {}
+
+        h1{
+            font-size: 64px !important;
+        }
+        .muted-text{
+            font-size: 20px !important;
+        }
+    }
+}
+
+@media (max-width: 375px) {
+    #content {
+        display: flex !important;
+        flex-flow: column !important;
+        #content-header {}
+
+        h1{
+            font-size: 40px !important;
+        }
+        .muted-text{
+            font-size: 14px !important;
         }
     }
 }
